[package]
name = "websocket_client"
version = "0.1.0"
authors = ["Gary Bey <beyhy94@gmail.com>"]
edition = "2021" # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = "0.23.0"
serde_json = "1.0.78"
url = "2.2.2"
env_logger="*"